# vervan-chat

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/mermaid/: index.html
app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp  whisper_bridge.cpp
app/src/main/java/com/vervan/chat/: IncomingShare.kt  MainActivity.kt  VervanApp.kt
app/src/main/java/com/vervan/chat/audio/: AudioNormalizer.kt  ContinuousAudioCapture.kt  VoiceActivityDetector.kt  WavRecorder.kt
app/src/main/java/com/vervan/chat/data/: SecureDelete.kt
app/src/main/java/com/vervan/chat/data/backup/: BackupManager.kt
app/src/main/java/com/vervan/chat/data/branch/: BranchUtil.kt
app/src/main/java/com/vervan/chat/data/db/: AppDatabase.kt  Migrations.kt
app/src/main/java/com/vervan/chat/data/repo/: BuiltInPersonas.kt  BuiltInPromptTemplates.kt  BuiltInWorkflows.kt  CopyOnEdit.kt  MemoryRepository.kt  MemorySuggestionDetector.kt  PersonaTraits.kt
app/src/main/java/com/vervan/chat/data/settings/: SettingsRepository.kt
app/src/main/java/com/vervan/chat/llm/: AutoModelSelector.kt  ClarificationParser.kt  GenerationParamsResolver.kt  LlamaCppEngine.kt  LlamaCppJni.kt  LlmEngine.kt  ModelProfiles.kt  OneShotLlm.kt  ThinkingParser.kt  ThinkingPolicy.kt  TitleGenerator.kt  TokenEstimate.kt
app/src/main/java/com/vervan/chat/model/: CharacterCardImporter.kt  ChatDefaults.kt  ChatPdfExporter.kt  Chunker.kt  DocumentImportManager.kt  ImageUtils.kt  ModelFamily.kt  ModelImportManager.kt  OcrExtractor.kt  PendingChatSend.kt  TextExtractor.kt  WorkspaceManager.kt
app/src/main/java/com/vervan/chat/modeldownload/: HttpRangeDownloader.kt  HuggingFaceTokenStore.kt  ModelCatalog.kt  ModelDownloadException.kt  ModelDownloadRepository.kt  ModelDownloadService.kt  ModelUiState.kt  ModelValidator.kt  PendingModelBrowseFilter.kt  StorageManager.kt
app/src/main/java/com/vervan/chat/modelload/: ModelLoadCoordinator.kt  ModelLoadTypes.kt
app/src/main/java/com/vervan/chat/overlay/: BubbleService.kt  OverlayLifecycleOwner.kt  OverlayResultPanel.kt  ScreenCaptureActivity.kt  ScreenExplainScreen.kt
app/src/main/java/com/vervan/chat/retrieval/: EmbeddingEngine.kt  RawTfliteEmbedder.kt  RetrievalEngine.kt
app/src/main/java/com/vervan/chat/retrieval/tokenizer/: SentencePieceTokenizer.kt
app/src/main/java/com/vervan/chat/search/: KnowledgeGraphClient.kt  KnowledgeGraphStore.kt
app/src/main/java/com/vervan/chat/security/: AppLockManager.kt  EncryptedPrefs.kt
app/src/main/java/com/vervan/chat/server/: ApiServerAuth.kt  ApiServerService.kt  LocalApiServer.kt
app/src/main/java/com/vervan/chat/store/: ModelStoreRepository.kt  StoreDownloadService.kt  StoreHousekeeping.kt
app/src/main/java/com/vervan/chat/store/catalog/: CatalogParser.kt  CatalogRepository.kt  CatalogSignatureVerifier.kt  CatalogStore.kt
app/src/main/java/com/vervan/chat/store/eligibility/: VariantEligibility.kt
app/src/main/java/com/vervan/chat/store/install/: ArtifactFormatProbe.kt  HttpArtifactFetcher.kt  InstallSessionRecorder.kt  VariantInstaller.kt
app/src/main/java/com/vervan/chat/store/license/: LicenseAcceptanceStore.kt
app/src/main/java/com/vervan/chat/store/model/: StoreTypes.kt
app/src/main/java/com/vervan/chat/store/runtime/: RuntimeAdapter.kt
app/src/main/java/com/vervan/chat/store/storage/: BlobStore.kt  InstalledManifestStore.kt  StoreMaintenance.kt
app/src/main/java/com/vervan/chat/system/: CrashLogManager.kt  DeviceAwareProfile.kt  ErrorMessages.kt  GenerationService.kt  NetworkAuditLog.kt  NotificationHelper.kt  ThermalMonitor.kt
app/src/main/java/com/vervan/chat/tools/: ArithmeticEvaluator.kt  Tool.kt  ToolCallParser.kt  ToolRegistry.kt
app/src/main/java/com/vervan/chat/ui/chat/: BranchTreeScreen.kt  ChatComposerMedia.kt  ChatFormatting.kt  (+6 more)
app/src/main/java/com/vervan/chat/voice/: AndroidSystemTtsEngine.kt  KokoroTtsEngine.kt  PiperTtsEngine.kt  RealtimeVoiceController.kt  ReplayAudioPlayer.kt  SentenceChunker.kt  SpeechTextFormatter.kt  SttEngine.kt  SupertonicTtsEngine.kt.disabled  TtsEngine.kt  TtsEngineSelector.kt  TtsModelDownloadManager.kt  TtsPlaybackQueue.kt  WavPcmDecoder.kt  WhisperCppJni.kt  WhisperCppSttEngine.kt  WhisperSttEngine.kt
app/src/main/java/com/vervan/chat/widget/: QuickWidgetProviders.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  widget_background.xml
app/src/main/res/layout/: widget_new_note.xml  widget_quick_ask.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml  shortcuts.xml  widget_new_note_info.xml  widget_quick_ask_info.xml
app/src/test/java/com/vervan/chat/: CoreLogicTest.kt  IncomingShareTest.kt  MarkdownRendererTest.kt
app/src/test/java/com/vervan/chat/audio/: WavFormatTest.kt
app/src/test/java/com/vervan/chat/llm/: AutoModelSelectorTest.kt  GenerationParamsResolverTest.kt  ThinkingParserTest.kt  ThinkingPolicyTest.kt  TokenEstimateTest.kt
app/src/test/java/com/vervan/chat/model/: CharacterCardImporterTest.kt  ChatDefaultsTest.kt
app/src/test/java/com/vervan/chat/modeldownload/: HttpRangeDownloaderTest.kt  ModelDownloadActionsTest.kt
app/src/test/java/com/vervan/chat/modelload/: ModelLoadCoordinatorTest.kt
app/src/test/java/com/vervan/chat/overlay/: OverlayScrollBehaviorTest.kt
app/src/test/java/com/vervan/chat/retrieval/: SentencePieceTokenizerTest.kt
app/src/test/java/com/vervan/chat/search/: KnowledgeGraphClientTest.kt
app/src/test/java/com/vervan/chat/store/: CatalogParserTest.kt  CatalogTrustTest.kt  LicenseAcceptanceTest.kt  StoreInstallRecoveryTest.kt  VariantInstallerTest.kt
app/src/test/java/com/vervan/chat/system/: ErrorMessagesTest.kt
app/src/test/java/com/vervan/chat/tools/: ToolCallParserTest.kt
app/src/test/java/com/vervan/chat/voice/: SentenceChunkerTest.kt  SpeechTextFormatterTest.kt
scripts/: 1784402563281_build-llama-android-vulkan.ps1  build-llama-android-vulkan.ps1
scripts/patches/: 0001-vulkan-init-device-dispatcher.patch
(+203 files in other folders)
